Fix alignment of .networks

--- a/src/main.sass
+++ b/src/main.sass
@@ -122,14 +122,17 @@ section.section-home
   .subtitle
     font-weight: 400
   .networks
-    ul
-      padding: 0
-      list-style: none
-      display: flex
-      flex-direction: column
-      align-items: center
-    li
+    display: table
+    margin-left: auto
+    margin-right: auto
+    a
+      display: table-row
       line-height: 2.5
+    .icon, .text
+      display: table-cell
+    .icon
+      text-align: center
+      padding: 0 0.5em
   h1
     margin-bottom: .2em
   h2
